--- a/index.html
+++ b/index.html
@@ -11,10 +11,28 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="dist/index.css">
+
     <title>Live Striming</title>
+
+
+
 </head>
 
 <body>
+
+    <h1>hello</h1>
+
+    <svg class="globe__link-icon" aria-label="globe img">
+        <use href="assets/sprites.svg#globe-icon"></use>
+    </svg>
+
+
+
+
+
+
+
 
 </body>
 
