--- a/index.html
+++ b/index.html
@@ -21,11 +21,44 @@
 
 <body>
 
-    <h1>hello</h1>
+    <header class="header" aria-label="header">
+        <div class="container">
+            <nav class="header__nav nav" aria-label="header navigation">
+                <div class="nav__title">
+                    <a href="#" class="nav__title-link"> GLOUD <span>FLEX</span></a>
+                </div>
 
-    <svg class="globe__link-icon" aria-label="globe img">
-        <use href="assets/sprites.svg#globe-icon"></use>
-    </svg>
+                <div class="nav__links">
+                    <ul class="nav__links-list list" aria-label="header nav links">
+                        <li class="list__item" aria-label="first link">
+                            <a href="#" class="list__item-link">about us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="list__item-link">contact</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="nav__covid-wrapper covid">
+                    <a href="#" class="covid__link" aria-label="covid-19 update">COVID-19 UPDATE</a>
+                </div>
+
+                <div class="nav__globe-wrapper globe">
+                    <a href="#" class="globe__link" aria-label="globe info">
+                        <svg class="globe__link-icon" aria-label="globe img">
+                            <use href="assets/sprites.svg#globe-icon"></use>
+                        </svg>
+                    </a>
+                </div>
+
+            </nav>
+        </div>
+    </header>
+
+
+
+
+
 
 
 
