--- a/index.html
+++ b/index.html
@@ -58,7 +58,35 @@
 
 
 
+    <main aria-label="main content">
+        <section class="hero-section" aria-label="hero section">
+            <div class="container">
+                <div class="hero">
+                    <div class="hero__content">
+                        <h1 class="hero__title">WHEN PERFORMANCE MATTERS</h1>
+                        <button class="hero__action-btn">
+                            Start development with us!
+                        </button>
+                    </div>
 
+                    <div class="hero__notify">
+                        <img src="assets/img/pigeon_alpha.png" alt="pigcon" class="hero__notify-img">
+                        <p class="hero__notify-content">
+                            WE USE COOKIES TO ENSURE YOUR BEST EXPERIENCE.
+                            THROUGH YOUR CONTINUED USE OF THIS SITE YOU ACCEPT THIS USE.
+                            FOR MORE INFORMATION, PLEASE SEE OUR PRIVACY POLICY.
+                        </p>
+                        <button class="hero__notify-btn">ACCEPT</button>
+                    </div>
+
+                    <div class="hero__scroll">
+                        <span class="hero__scroll-content">scroll down</span>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 
