--- a/index.html
+++ b/index.html
@@ -196,6 +196,50 @@
             </div>
         </section>
 
+        <section class="experience-section" aria-label="experience section">
+            <div class="container">
+                <div class="experience">
+                    <h2 class="experience__title">Our experience</h2>
+                    <div class="experience__cards-wrapper">
+
+                        <figure class="img-card">
+                            <h3 class="img-card__title">Serverless Live Streaming</h3>
+                            <img src="assets/img/card_shooting.webp" alt="card_shooting img" class="img-card__preview">
+                            <button class="img-card__btn">
+                                <svg class="img-card__btn-icon" aria-label="arrow img">
+                                    <use href="assets/sprites.svg#arrow-icon"></use>
+                                </svg>
+                            </button>
+                        </figure>
+
+                        <figure class="img-card">
+                            <h3 class="img-card__title"> <span>Learn about CloudFlex</span>
+                                <span>team cases</span>
+                            </h3>
+                            <img src="assets/img/card_working.webp" alt="card_working img" class="preview">
+                            <button class="img-card__btn">
+                                <svg class="img-card__btn-icon " aria-label="arrow img">
+                                    <use href="assets/sprites.svg#arrow-icon"></use>
+                                </svg>
+                            </button>
+                        </figure>
+
+                        <figure class="img-card">
+                            <h3 class="img-card__title">Live streaming from mobile</h3>
+                            <img src="assets/img/card_streaming.webp" alt="card_streaming img" class="preview">
+                            <button class="img-card__btn">
+                                <svg class="img-card__btn-icon " aria-label="arrow img">
+                                    <use href="assets/sprites.svg#arrow-icon"></use>
+                                </svg>
+                            </button>
+                        </figure>
+
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
 
