--- a/index.html
+++ b/index.html
@@ -4,36 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
-
+    <link rel="icon" href="assets/favicon.png" type="image/png">
     <link rel="stylesheet" href="dist/index.css">
-
-    <title>Live Striming</title>
-
-
-
+    <title>Live Streaming</title>
 </head>
 
 <body>
-
     <header class="header" aria-label="header">
         <div class="container">
             <nav class="header__nav nav" aria-label="header navigation">
                 <div class="nav__title">
-                    <a href="#" class="nav__title-link"> GLOUD <span>FLEX</span></a>
+                    <a href="#" class="nav__title-link">CLOUD <span>FLEX</span></a>
                 </div>
 
                 <div class="nav__links">
                     <ul class="nav__links-list list" aria-label="header nav links">
                         <li class="list__item">
-                            <a href="#" class="list__item-link">about us</a>
+                            <a href="#" class="list__item-link">about</a>
                         </li>
-                        <li>
+                        <li class="list__item">
                             <a href="#" class="list__item-link">contact</a>
                         </li>
                     </ul>
@@ -50,13 +43,50 @@
                         </svg>
                     </a>
                 </div>
-
             </nav>
         </div>
     </header>
 
+    <div class="mobile-navigation">
+        <label for="checkboxID" class="mobile-navigation__burger">
+            <svg class="mobile-navigation__burger-icon" aria-label="burger icon">
+                <use href="assets/sprites.svg#burger-icon"></use>
+            </svg>
+        </label>
 
+        <input id="checkboxID" type="checkbox" class="mobile-navigation__toggler">
 
+        <nav class="mobile-navigation__menu nav">
+            <ul class="nav__list">
+                <li class="nav__list-item">
+                    <a href="#work" class="nav__list-item-link" onclick="window.location.reload(true);">How we work</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#about" class="nav__list-item-link" onclick="window.location.reload(true);">About us</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#experience" class="nav__list-item-link" onclick="window.location.reload(true);">Our
+                        experience</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#testimonials" class="nav__list-item-link"
+                        onclick="window.location.reload(true);">Testimonials</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#formSection" class="nav__list-item-link" onclick="window.location.reload(true);">Form</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#contacts" class="nav__list-item-link" onclick="window.location.reload(true);">Contacts</a>
+                </li>
+            </ul>
+
+            <label for="checkboxID" class="nav__close">
+                <svg class="nav__close-icon" aria-label="close icon">
+                    <use href="assets/sprites.svg#cross-icon"></use>
+                </svg>
+            </label>
+        </nav>
+    </div>
 
     <main aria-label="main content">
         <section class="hero-section" aria-label="hero section">
@@ -64,33 +94,33 @@
                 <div class="hero">
                     <div class="hero__content">
                         <h1 class="hero__title">WHEN PERFORMANCE MATTERS</h1>
-                        <button class="hero__action-btn">
-                            Start development with us!
-                        </button>
+                        <button class="hero__action-btn">Start development with us!</button>
                     </div>
 
                     <div class="hero__notify">
-                        <img src="assets/img/pigeon_alpha.png" alt="pigcon" class="hero__notify-img">
+                        <img src="assets/img/pigeon_alpha.png" alt="pigeon img" class="hero__notify-img">
                         <p class="hero__notify-content">
                             WE USE COOKIES TO ENSURE YOUR BEST EXPERIENCE.
                             THROUGH YOUR CONTINUED USE OF THIS SITE YOU ACCEPT THIS USE.
                             FOR MORE INFORMATION, PLEASE SEE OUR PRIVACY POLICY.
                         </p>
-                        <button class="hero__notify-btn">ACCEPT</button>
+                        <button class="hero__notify-btn">accept</button>
                     </div>
 
                     <div class="hero__scroll">
-                        <span class="hero__scroll-content">scroll down</span>
+                        <span class="hero__scroll-content">
+                            Scroll down
+                        </span>
                     </div>
-
                 </div>
             </div>
         </section>
 
-        <section class="work-section">
+        <section class="work-section" id="work">
             <div class="container">
                 <div class="work">
                     <h2 class="work__title">How we work</h2>
+
                     <div class="work__cards-wrapper">
                         <figure class="info-card card--analysis" aria-label="card analysis">
                             <svg class="info-card__icon icon--bulb" aria-label="bulb img">
@@ -152,16 +182,14 @@
                                 experience.
                             </p>
                         </figure>
-
                     </div>
-
                 </div>
             </div>
         </section>
 
         <hr class="divider">
 
-        <section class="about-section">
+        <section class="about-section" id="about">
             <div class="container">
                 <div class="about">
                     <div class="about__quality">
@@ -176,83 +204,83 @@
                     <div class="about__touch">
                         <h3 class="about__touch-title">Always in touch</h3>
                         <p class="about__touch-desc">
-                            We are always ready to answer your questions.<br>
-                            You can call us at the weekends and at night.<br>
-                            Also you can have a meeting for personal consultation.
+                            We are always ready to answer your questions.
+                            <br>You can call us at the weekends and at night.
+                            <br>Also you can have a meeting for personal consultation.
                         </p>
                     </div>
 
                     <div class="about__approach">
                         <h3 class="about__approach-title">Individual Approach</h3>
                         <p class="about__approach-desc">
-                            Our company works according to the principle of individual approach to every client.<br>
-                            This method lets us to get success in problems of all levels.
+                            Our company works according to the principle of individual approach to every client.
+                            <br>This method lets us to get success in problems of all levels.
                         </p>
                     </div>
-
-
-
                 </div>
             </div>
         </section>
 
-        <section class="experience-section" aria-label="experience section">
+        <section class="experience-section" aria-label="experience section" id="experience">
             <div class="container">
                 <div class="experience">
                     <h2 class="experience__title">Our experience</h2>
-                    <div class="experience__cards-wrapper">
 
+                    <div class="experience__cards-wrapper">
                         <figure class="img-card">
                             <h3 class="img-card__title">Serverless Live Streaming</h3>
                             <img src="assets/img/card_shooting.webp" alt="card_shooting img" class="img-card__preview">
                             <button class="img-card__btn">
-                                <svg class="img-card__btn-icon" aria-label="arrow img">
+                                <svg class="img-card__btn-icon" aria-label="arrow icon">
                                     <use href="assets/sprites.svg#arrow-icon"></use>
                                 </svg>
                             </button>
                         </figure>
 
                         <figure class="img-card">
-                            <h3 class="img-card__title"> <span>Learn about CloudFlex</span>
+                            <h3 class="img-card__title">
+                                <span>Learn about CloudFlex</span>
                                 <span>team cases</span>
                             </h3>
-                            <img src="assets/img/card_working.webp" alt="card_working img" class="preview">
+                            <img src="assets/img/card_working.webp" alt="card_working img" class="img-card__preview">
                             <button class="img-card__btn">
-                                <svg class="img-card__btn-icon " aria-label="arrow img">
+                                <svg class="img-card__btn-icon" aria-label="arrow icon">
                                     <use href="assets/sprites.svg#arrow-icon"></use>
                                 </svg>
                             </button>
                         </figure>
 
                         <figure class="img-card">
-                            <h3 class="img-card__title">Live streaming from mobile</h3>
-                            <img src="assets/img/card_streaming.webp" alt="card_streaming img" class="preview">
+                            <h3 class="img-card__title">Serverless Live Streaming</h3>
+                            <img src="assets/img/card_streaming.webp" alt="card_streaming img"
+                                class="img-card__preview">
                             <button class="img-card__btn">
-                                <svg class="img-card__btn-icon " aria-label="arrow img">
+                                <svg class="img-card__btn-icon" aria-label="arrow icon">
                                     <use href="assets/sprites.svg#arrow-icon"></use>
                                 </svg>
                             </button>
                         </figure>
-
                     </div>
                 </div>
             </div>
-
         </section>
 
-        <section class="testimonials-section">
-
+        <section class="testimonials-section" aria-label="testimonials section" id="testimonials">
             <div class="container">
                 <div class="testimonials">
-                    <h2 class="testimonials__title">Testimonials</h2>
+                    <h2 class="testimonials__title">
+                        Testimonials
+                    </h2>
 
                     <div class="testimonials__slider slider">
                         <figure class="wave-card">
-                            <img src="assets/img/avatar_alpha.png" alt="avatar" class="wave-card__avatar">
+                            <img src="assets/img/avatar_alpha.png" alt="" class="wave-card__avatar">
 
                             <blockquote class="wave-card__quote" cite="https://happyclient.com">
-                                <p>Очень хороший отзыв, который оставил довольный клиент. А тут я ещё не придумал что
-                                    написать, поэтому просто добавил это предложение.</p>
+                                <p>
+                                    Очень хороший отзыв, который оставил довольный клиент. А тут я ещё не придумал что
+                                    написать, поэтому просто добавил это предложение.
+                                </p>
                             </blockquote>
                         </figure>
 
@@ -261,7 +289,6 @@
                                 <use href="assets/sprites.svg#arrow-icon"></use>
                             </svg>
                         </button>
-
 
                         <button class="slider__right-btn">
                             <svg class="slider__right-btn-icon" aria-label="arrow icon">
@@ -277,14 +304,10 @@
                             <div class="slider__points-item"></div>
                             <div class="slider__points-item"></div>
                         </div>
-
                     </div>
                 </div>
-
             </div>
-
         </section>
-
 
         <section class="form-section" aria-label="form section" id="formSection">
             <div class="container">
@@ -307,9 +330,7 @@
             <div class="form-section__bg-cloud cloud--left"></div>
             <div class="form-section__bg-cloud cloud--right"></div>
         </section>
-
     </main>
-
 
     <footer class="footer-section" aria-label="contacts section" id="contacts">
         <div class="container">
@@ -347,8 +368,6 @@
             </div>
         </div>
     </footer>
-
-
 </body>
 
 </html>
